# SimpleIO

./: .gitignore  README.md
docs/1.0.2/csharp/html/: annotated.html  class_mku_1_1_convert_1_1_base64-members.html  class_mku_1_1_convert_1_1_base64.html  class_mku_1_1_convert_1_1_bit_converter-members.html  class_mku_1_1_convert_1_1_bit_converter.html  class_mku_1_1_encode_1_1_base64_utils-members.html  class_mku_1_1_encode_1_1_base64_utils.html  class_mku_1_1_streams_1_1_blocking_input_output_adapter_stream-members.html  class_mku_1_1_streams_1_1_blocking_input_output_adapter_stream.html  class_mku_1_1_streams_1_1_blocking_input_output_adapter_stream_1_1_backing_input_stream-members.html  class_mku_1_1_streams_1_1_blocking_input_output_adapter_stream_1_1_backing_input_stream.html  class_mku_1_1_streams_1_1_buffer-members.html  class_mku_1_1_streams_1_1_buffer.html  class_mku_1_1_streams_1_1_input_stream_wrapper-members.html  class_mku_1_1_streams_1_1_input_stream_wrapper.html  class_mku_1_1_streams_1_1_memory_stream-members.html  class_mku_1_1_streams_1_1_memory_stream.html  class_mku_1_1_streams_1_1_random_access_stream-members.html  (+22 more)
scripts/docs/: Doxyfile.NET  DoxyfileAndroid.NET  DoxyfilePython  gendocs.sh  package.json  tsconfig.json
src/python/simple_io/: pyproject.toml
src/python/simple_io/simple_io/convert/: __init__.py  base_64.py  bit_converter.py  ibase_64.py
src/python/simple_io/simple_io/encode/: __init__.py  base64_utils.py
src/python/simple_io/simple_io/streams/: buffer.py  buffered_io_wrapper.py  memory_stream.py  random_access_stream.py
(+222 files in other folders)
