[project]
name = "simple_io"
version = "1.0.0"
authors = [
  { name="Max Kas"},
]
description = "Simple IO library"
readme = "README.md"
requires-python = ">=3.11"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
  'typeguard >= 4.1.5',
]

[project.urls]
Homepage = "https://github.com/mku11/SimpleIO"
Issues = "https://github.com/mku11/SimpleIO/issues"
